--- a/popup.html
+++ b/popup.html
@@ -5,26 +5,6 @@
     <style>
       body {
         width: 200px;
-        height: 50px;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        text-align: center;
-        border-radius: 5px;
-      }
-
-      h1 {
-        font-size: 20px;
-        font-weight: bold;
-        margin: 0;
-        padding: 0;
-        border-radius: 5px;
-      }
-
-      p {
-        font-size: 16px;
-        margin: 5px;
-        padding: 0;
-        border-radius: 5px;
       }
     </style>
  <head>
@@ -33,6 +13,6 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <p>Skroutz Sponsored Flagger</p>
+    <p>Sponsored content flagged: <span id="countDisplay">Loading count...</span></p>
   </body>
 </html>
