--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Skroutz Ad Blocker Popup</title>
-    <style>
-      body {
-        width: 200px;
-      }
-    </style>
- <head>
     <meta charset="utf-8" />
     <title>Skroutz Sponsored Flagger</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="popup.js"></script>
   </head>
   <body>
-    <p>Sponsored content flagged: <span id="countDisplay">Loading count...</span></p>
+    <p>
+      Sponsored content flagged: <span id="countDisplay">Loading count...</span>
+    </p>
   </body>
 </html>
