--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Skroutz Sponsored Flagger</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="popup.js"></script>
   </head>
-  <body>
+  <body class="popup-body">
     <p>
       Sponsored content flagged: <span id="countDisplay">Loading count...</span>
     </p>
   </body>
+  <script src="popup.js"></script>
 </html>
