Add button to indicate how many sponsored there are and enable user to toggle on and off

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,8 @@
   </head>
   <body class="popup-body">
     <p>
-      Sponsored content flagged: <span id="countDisplay">Loading count...</span>
+      <div class="left-span">Sponsored content <b>flagged</b> from Skroutz:</div>
+      <b><div class="right-span circle" id="countDisplay">loading count...</div></b>
     </p>
   </body>
   <script src="popup.js"></script>
