Updated logic to give more power to the user

--- a/popup.html
+++ b/popup.html
@@ -3,13 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <title>Skroutz Sponsored Flagger</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body class="popup-body">
-    <p>
-      <div class="left-span">Sponsored content <b>flagged</b> from Skroutz:</div>
-      <b><div class="right-span circle" id="countDisplay">loading count...</div></b>
-    </p>
+    <div class="content-flex">
+      <div class="left-span">Sponsored&nbsp;<b>flagged</b>:</div>
+      <b
+        ><div class="right-span circle" id="sponsoredCount">
+          loading count...
+        </div></b
+      >
+    </div>
+    <hr>
+    <div class="content-flex">
+      <div class="left-span">Promo&nbsp;<b>flagged</b>:</div>
+      <b
+        ><div class="right-span circle" id="promoCount">
+          loading count...
+        </div></b
+      >
+    </div>
   </body>
   <script src="popup.js"></script>
 </html>
