--- a/popup.html
+++ b/popup.html
@@ -7,21 +7,23 @@
   </head>
   <body class="popup-body">
     <div class="content-flex">
-      <div class="left-span">Sponsored&nbsp;<b>flagged</b>:</div>
-      <b
-        ><div class="right-span circle" id="sponsoredCount">
-          loading count...
-        </div></b
-      >
+      <div class="left-span">
+        <span>Sponsored <b>flagged</b>:</span>
+      </div>
+      <div class="right-span circle">
+        <p id="sponsoredCount">loading count...</p>
+      </div>
     </div>
-    <hr>
+
+    <hr />
+
     <div class="content-flex">
-      <div class="left-span">Promo&nbsp;<b>flagged</b>:</div>
-      <b
-        ><div class="right-span circle" id="promoCount">
-          loading count...
-        </div></b
-      >
+      <div class="left-span">
+        <span>Promo <b>flagged</b>:</span>
+      </div>
+      <div class="right-span circle">
+        <p id="promoCount">loading count...</p>
+      </div>
     </div>
   </body>
   <script src="popup.js"></script>
