Popup design update

--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,12 @@
   <body class="popup-body">
     <dl class="content">
       <div class="content-flex">
-        <dt class="left-span">Promo <strong>flagged</strong> :</dt>
-        <dd class="right-span circle" id="promoCount">loading count...</dd>
-      </div>
-
-      <div class="content-flex">
-        <dt class="left-span">Sponsored <strong>flagged</strong>:</dt>
+        <dt class="left-span"><strong>Sponsored</strong> flagged</dt>
         <dd class="right-span circle" id="sponsoredCount">loading count...</dd>
+      </div>
+      <div class="content-flex">
+        <dt class="left-span"><strong>Promo</strong> flagged</dt>
+        <dd class="right-span circle" id="promoCount">loading count...</dd>
       </div>
     </dl>
   </body>
