--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,17 @@
   <body class="popup-body">
     <dl class="content">
       <div class="content-flex">
-        <dt class="left-span"><strong>Sponsored</strong> flagged</dt>
+        <dt class="left-span"><strong>Sponsored product</strong> flagged</dt>
         <dd class="right-span circle" id="sponsoredCount">loading count...</dd>
       </div>
       <div class="content-flex">
-        <dt class="left-span"><strong>Promo</strong> flagged</dt>
+        <dt class="left-span"><strong>Sponsored shelf</strong> flagged</dt>
+        <dd class="right-span circle" id="sponsoredShelfCount">
+          loading count...
+        </dd>
+      </div>
+      <div class="content-flex">
+        <dt class="left-span"><strong>Sponsored promo</strong> flagged</dt>
         <dd class="right-span circle" id="promoCount">loading count...</dd>
       </div>
     </dl>
