--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Skroutz Sponsored Flagger</title>
-    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="css/popup.css" />
   </head>
   <body class="popup-body">
     <dl class="content">
@@ -18,7 +18,7 @@
         </dd>
       </div>
       <div class="content-flex">
-        <dt class="left-span"><strong>Sponsored promo</strong> flagged</dt>
+        <dt class="left-span"><strong>Promotional video</strong> flagged</dt>
         <dd class="right-span circle" id="promoCount">loading count...</dd>
       </div>
     </dl>
