--- a/popup.html
+++ b/popup.html
@@ -8,18 +8,18 @@
   <body class="popup-body">
     <dl class="content">
       <div class="content-flex">
-        <dt class="left-span"><strong>Sponsored product</strong> flagged</dt>
+        <dt class="left-span"><strong>Sponsored products</strong> flagged</dt>
         <dd class="right-span circle" id="sponsoredCount">loading count...</dd>
       </div>
       <div class="content-flex">
-        <dt class="left-span"><strong>Sponsored shelf</strong> flagged</dt>
+        <dt class="left-span"><strong>Sponsored shelves</strong> flagged</dt>
         <dd class="right-span circle" id="sponsoredShelfCount">
           loading count...
         </dd>
       </div>
       <div class="content-flex">
-        <dt class="left-span"><strong>Promotional video</strong> flagged</dt>
-        <dd class="right-span circle" id="promoCount">loading count...</dd>
+        <dt class="left-span"><strong>Promotional videos</strong> flagged</dt>
+        <dd class="right-span circle" id="videoCount">loading count...</dd>
       </div>
     </dl>
   </body>
