--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,26 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <title>Skroutz Sponsored Flagger</title>
-    <link rel="stylesheet" href="css/popup.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body class="popup-body">
     <dl class="content">
       <div class="content-flex">
         <dt class="left-span"><strong>Sponsored products</strong> flagged</dt>
-        <dd class="right-span circle" id="sponsoredCount">loading count...</dd>
+        <dd class="right-span circle" id="sponsoredCount">...</dd>
       </div>
       <div class="content-flex">
         <dt class="left-span"><strong>Sponsored shelves</strong> flagged</dt>
-        <dd class="right-span circle" id="sponsoredShelfCount">
-          loading count...
-        </dd>
+        <dd class="right-span circle" id="sponsoredShelfCount">...</dd>
       </div>
       <div class="content-flex">
         <dt class="left-span"><strong>Promotional videos</strong> flagged</dt>
-        <dd class="right-span circle" id="videoCount">loading count...</dd>
+        <dd class="right-span circle" id="videoCount">...</dd>
       </div>
     </dl>
   </body>
 
-  <script src="popup.js"></script>
+  <script src="../popup.js"></script>
 </html>
