Add rate section to popup

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -20,6 +20,16 @@
         <dd class="right-span circle" id="videoCount">...</dd>
       </div>
     </dl>
+
+    <div class="rate-section">
+      <p><strong>If you enjoy SSF<br>rate it on</strong></p>
+      <a href="https://addons.mozilla.org/en-US/firefox/addon/skroutz-sponsored-flagger/reviews/" target="_blank" rel="noopener noreferrer">
+        <img src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" alt="Rate on Firefox Add-ons" />
+      </a>
+      <a href="https://chrome.google.com/webstore/detail/skroutz-sponsored-flagger/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer">
+        <img src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" alt="Rate on Chrome Web Store" />
+      </a>
+    </div>
   </body>
 
   <script src="../popup.js"></script>
