Update Skroutz popup and readme

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skroutz Sponsored Flagger</title>
     <link rel="stylesheet" href="popup.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -32,13 +33,15 @@
     </div>
 
     <div class="rate-section">
-      <p><strong>If you enjoy SSF<br>rate it on</strong></p>
+      <p><strong>If you enjoy the extension<br>rate it on</strong></p>
       <div class="icons">
         <a href="https://addons.mozilla.org/en-US/firefox/addon/skroutz-sponsored-flagger/reviews/" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" alt="Rate on Firefox Add-ons" class="rate-icon" />
+            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/firefox.png" width="150" alt="Rate on Firefox Add-ons" class="rate-icon" />
+            <!-- src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" -->
         </a>
         <a href="https://chrome.google.com/webstore/detail/skroutz-sponsored-flagger/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" alt="Rate on Chrome Web Store" class="rate-icon" />
+            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/chrome.png" width="150" alt="Rate on Chrome Web Store" class="rate-icon" />
+            <!-- src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" -->
         </a>
       </div>
     </div>
