--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -36,11 +36,11 @@
       <p><strong>If you enjoy the extension<br>rate it on</strong></p>
       <div class="icons">
         <a href="https://addons.mozilla.org/en-US/firefox/addon/skroutz-sponsored-flagger/reviews/" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/firefox.png" width="150" alt="Rate on Firefox Add-ons" class="rate-icon" />
+            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/firefox.png" alt="Rate on Firefox Add-ons" class="rate-icon" style="width: 125px;" />
             <!-- src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" -->
         </a>
         <a href="https://chrome.google.com/webstore/detail/skroutz-sponsored-flagger/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/chrome.png" width="150" alt="Rate on Chrome Web Store" class="rate-icon" />
+            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/chrome.png" alt="Rate on Chrome Web Store" class="rate-icon" style="width: 125px;" />
             <!-- src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" -->
         </a>
       </div>
