Rebrand to reSkroutzed

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skroutz Sponsored Flagger</title>
+    <title>reSkroutzed</title>
     <link rel="stylesheet" href="popup.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="popup-body">
     <div class="label-section">
       <div class="logo">
-        <a href="https://github.com/keybraker/skroutz-sponsored-flagger" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/src/assets/icons/128.png" alt="Skroutz sponsored flagger icon" class="rate-icon" />
+        <a href="https://github.com/keybraker/reskroutzed" target="_blank" rel="noopener noreferrer" class="icon-link">
+            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/src/assets/icons/128.png" alt="reSkroutzed icon" class="rate-icon" />
         </a>
       </div>
-      <p><strong><br>Skroutz Sponsored Flagger</strong></p>
+      <p><strong><br>reSkroutzed</strong></p>
     </div>
 
     <div class="content">
@@ -35,12 +35,12 @@
     <div class="rate-section">
       <p><strong>If you enjoy the extension<br>rate it on</strong></p>
       <div class="icons">
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/skroutz-sponsored-flagger/reviews/" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/firefox.png" alt="Rate on Firefox Add-ons" class="rate-icon" style="width: 125px;" />
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/reskroutzed/reviews/" target="_blank" rel="noopener noreferrer" class="icon-link">
+            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/firefox.png" alt="Rate on Firefox Add-ons" class="rate-icon" style="width: 125px;" />
             <!-- src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" -->
         </a>
-        <a href="https://chrome.google.com/webstore/detail/skroutz-sponsored-flagger/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/skroutz-sponsored-flagger/main/assets/store_images/chrome.png" alt="Rate on Chrome Web Store" class="rate-icon" style="width: 125px;" />
+        <a href="https://chrome.google.com/webstore/detail/reskroutzed/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer" class="icon-link">
+            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/chrome.png" alt="Rate on Chrome Web Store" class="rate-icon" style="width: 125px;" />
             <!-- src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" -->
         </a>
       </div>
