--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,49 +2,80 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>reSkroutzed</title>
     <link rel="stylesheet" href="popup.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="popup-body">
-    <div class="label-section">
-      <div class="logo">
-        <a href="https://github.com/keybraker/reskroutzed" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/src/assets/icons/128.png" alt="reSkroutzed icon" class="rate-icon" />
+    <header class="header">
+      <div class="logo-container">
+        <a
+          href="https://github.com/keybraker/reskroutzed"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/src/assets/icons/128.png"
+            alt="reSkroutzed icon"
+            class="logo-image"
+          />
         </a>
+        <h1 class="app-title">reSkroutzed</h1>
       </div>
-      <p><strong><br>reSkroutzed</strong></p>
-    </div>
+    </header>
 
-    <div class="content">
-      <div class="content-item">
-          <span class="item-label"><strong>Sponsored products</strong> flagged</span>
-          <span class="item-value" id="sponsoredCount">...</span>
+    <main class="content">
+      <div class="stats-container">
+        <div class="stat-card">
+          <div class="stat-label">Sponsored Products</div>
+          <div class="stat-value" id="sponsoredCount">...</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-label">Sponsored Shelves</div>
+          <div class="stat-value" id="sponsoredShelfCount">...</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-label">Promotional Videos</div>
+          <div class="stat-value" id="videoCount">...</div>
+        </div>
       </div>
-      <div class="content-item">
-          <span class="item-label"><strong>Sponsored shelves</strong> flagged</span>
-          <span class="item-value" id="sponsoredShelfCount">...</span>
-      </div>
-      <div class="content-item">
-          <span class="item-label"><strong>Promotional videos</strong> flagged</span>
-          <span class="item-value" id="videoCount">...</span>
-      </div>
-    </div>
+    </main>
 
-    <div class="rate-section">
-      <p><strong>If you enjoy the extension<br>rate it on</strong></p>
-      <div class="icons">
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/reskroutzed/reviews/" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/firefox.png" alt="Rate on Firefox Add-ons" class="rate-icon" style="width: 125px;" />
-            <!-- src="https://www.mozilla.org/media/protocol/img/logos/firefox/browser/logo.eb1324e44442.svg" -->
-        </a>
-        <a href="https://chrome.google.com/webstore/detail/reskroutzed/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0" target="_blank" rel="noopener noreferrer" class="icon-link">
-            <img src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/chrome.png" alt="Rate on Chrome Web Store" class="rate-icon" style="width: 125px;" />
-            <!-- src="https://www.google.com/chrome/static/images/chrome-logo-m100.svg" -->
-        </a>
+    <footer class="footer">
+      <div class="rate-section">
+        <p>Rate this extension on</p>
+        <div class="store-links">
+          <a
+            href="https://addons.mozilla.org/en-US/firefox/addon/reskroutzed/reviews/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="store-link"
+          >
+            <img
+              src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/firefox.png"
+              alt="Firefox Add-ons"
+              class="store-icon"
+            />
+          </a>
+          <a
+            href="https://chrome.google.com/webstore/detail/reskroutzed/amglnkndjeoojnjjeepeheobhneeogcl?hl=en&authuser=0"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="store-link"
+          >
+            <img
+              src="https://raw.githubusercontent.com/keybraker/reskroutzed/main/assets/store_images/chrome.png"
+              alt="Chrome Web Store"
+              class="store-icon"
+            />
+          </a>
+        </div>
       </div>
-    </div>
+    </footer>
+    <script src="../popup.js"></script>
   </body>
-  <script src="../popup.js"></script>
 </html>
