Enhance mobile support and optimize UI for reSkroutzed

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>reSkroutzed</title>
     <link rel="stylesheet" href="popup.css" />
     <link
