Add sponsorships toggle to popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -57,6 +57,13 @@
             </div>
           </div>
           <div class="setting-item">
+            <label class="setting-label" for="toggleSponsorships">Sponsorships</label>
+            <div class="toggle-switch">
+              <input type="checkbox" id="toggleSponsorships" class="toggle-input" checked />
+              <label for="toggleSponsorships" class="toggle-label"></label>
+            </div>
+          </div>
+          <div class="setting-item">
             <label class="setting-label" for="toggleDarkMode">Dark Mode</label>
             <div class="toggle-switch">
               <input type="checkbox" id="toggleDarkMode" class="toggle-input" />
