--- a/popup/popup.html
+++ b/popup/popup.html
@@ -77,8 +77,8 @@
       <div class="price-settings">
         <h2 class="section-title">Price Difference Alert</h2>
         <div class="price-input-container">
-          <label for="priceDifference">Minimum difference (€):</label>
-          <input type="number" id="priceDifference" min="0" step="0.5" value="0" />
+          <label for="priceDifference">Min. difference (€):</label>
+          <input type="number" id="priceDifference" min="0" step="0.5" value="0" style="width: 80px;" />
           <button id="updatePriceBtn" class="action-button">Update</button>
         </div>
       </div>
