Add ability to remove universal toggle

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -36,6 +36,13 @@
         <h2 class="section-title">Quick Settings</h2>
         <div class="settings-grid">
           <div class="setting-item">
+            <label class="setting-label" for="toggleUniversalToggle">Universal Toggle</label>
+            <div class="toggle-switch">
+              <input type="checkbox" id="toggleUniversalToggle" class="toggle-input" checked />
+              <label for="toggleUniversalToggle" class="toggle-label"></label>
+            </div>
+          </div>
+          <div class="setting-item">
             <label class="setting-label" for="toggleAds">Ads</label>
             <div class="toggle-switch">
               <input type="checkbox" id="toggleAds" class="toggle-input" checked />
