--- a/popup/popup.html
+++ b/popup/popup.html
@@ -57,6 +57,13 @@
             </div>
           </div>
           <div class="setting-item">
+            <label class="setting-label" for="toggleAISlop">Remove AI Slop</label>
+            <div class="toggle-switch">
+              <input type="checkbox" id="toggleAISlop" class="toggle-input" checked />
+              <label for="toggleAISlop" class="toggle-label"></label>
+            </div>
+          </div>
+          <div class="setting-item">
             <label class="setting-label" for="toggleVideos">Videos</label>
             <div class="toggle-switch">
               <input type="checkbox" id="toggleVideos" class="toggle-input" checked />
