Update AI Slop toggle label and behavior for improved clarity

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -57,9 +57,9 @@
             </div>
           </div>
           <div class="setting-item">
-            <label class="setting-label" for="toggleAISlop">Remove AI Slop</label>
+            <label class="setting-label" for="toggleAISlop">AI Features</label>
             <div class="toggle-switch">
-              <input type="checkbox" id="toggleAISlop" class="toggle-input" checked />
+              <input type="checkbox" id="toggleAISlop" class="toggle-input" />
               <label for="toggleAISlop" class="toggle-label"></label>
             </div>
           </div>
